fixed spacing of details on mobile in inventory card

--- a/src/components/InventoryCard/InventoryCard.scss
+++ b/src/components/InventoryCard/InventoryCard.scss
@@ -7,7 +7,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
   padding: 1.5rem;
-  column-gap: 1.5rem;
+  gap: 1.5rem 1.25rem;
 
   @include tablet {
     grid-template-rows: 1fr;
